<resources>
    <string name="app_name">SDA_A5_Project_2023_GerardHeffernan</string>
    <string name="Angel">Angel</string>
    <string name="Demon">Demon</string>
    <string name="Psychic">Psychic</string>
    <string name="Fire">Fire</string>
    <string name="Ice">Ice</string>
    <string name="Earth">Earth</string>
    <string name="randbattle">randBattle</string>
    <string name="win">You Have Won!</string>
    <string name="lost">You Have Lost!</string>
    <string name="draw"> The Battle is a Draw!</string>
    <string name="you_selected">You selected</string>
    <string name="user_selection">user selection</string>
    <string name="ai_selected">AI selected</string>
    <string name="ai_selection">ai_selection</string>
    <string name="attack">Attack</string>
    <string name="reset">Reset</string>
    <string name="round">Round</string>
    <string name="user">User</string>
    <string name="result">Result</string>
    <string name="name">Name</string>
    <string name="score_board">Score Board</string>
    <string name="reset_details">Reset Details</string>
    <string name="play_again">Play Again</string>
    <string name="enter_your_name_to_upload_score_details">Enter your name to upload score details!</string>
    <string name="remember_name_for_next_game">Remember name for next game?</string>
    <string name="how_to_play">How To Play</string>
    <string name="ai_used_angel">AI used Angel</string>
    <string name="ai_used_demon">AI used Demon</string>
    <string name="ai_used_psychic">AI used Psychic</string>
    <string name="ai_used_ifrit">AI used Fire</string>
    <string name="ai_used_shiva">AI used Ice</string>
    <string name="ai_used_terra">AI used Earth</string>
    <string name="player_card_used">player card used</string>
    <string name="battle">Battle</string>
    <string name="elements">ELEMENTS</string>
    <string name="a_strategic_card_game">A Strategic Card Game</string>
    <string name="battletypetext">battletypetext</string>
    <string name="cards">CARDS</string>
    <string name="select_a_card_and_then_select_attack">Select a card and then select attack.</string>
    <string name="fire_is_level_against_demon_psychic_and_angel">FIRE is level against DEMON,PSYCHIC and ANGEL</string>
    <string name="ice_is_level_against_demon_psychic_and_angel">ICE is level against DEMON,PSYCHIC and ANGEL</string>
    <string name="earth_is_level_against_demon_psychic_and_angel">EARTH is level against DEMON,PSYCHIC and ANGEL</string>
    <string name="score_a_point_by_using_the_strong_element_against_its_weaker_type">Score a point by using the strong element against its weaker type</string>
    <string name="the_3_elements_that_are_above_are_even_to_the_elements_that_are_below">The 3 Elements that are above are even to the Elements that are below</string>
    <string name="using_even_elements_against_each_other_grants_both_players_a_point">Using even Elements against each other grants both players a point</string>


</resources>